<resources>
    <string name="app_name">Новини України</string>
    <string name="action_internet">internet</string>
    <string name="action_share">share</string>
    <string name="share_from">share from</string>
    <string name="share_with">share with</string>
    <string name="share_error">share error</string>
    <string name="settings">Налаштування</string>
    <string name="day">день</string>
    <string name="night">ніч</string>
    <string name="search">пошук за назвою…</string>
    <string name="no_internet_connection">немає інтернету</string>
    <string name="connect">УВІМКНУТИ WI-FI</string>
    <string name="no_cache">кеш відсутній</string>
    <string name="max_length">Максимальна кількість новин у стрічці</string>
    <string name="remove_cache">видалити кеш</string>
    <string name="text_title_size">Розмір шрифту заголовка:</string>
    <string name="title">Заголовок</string>
    <string name="text_content_size">Розмір шрифту контенту:</string>
    <string name="content">Контент</string>
    <string name="cache_was_deleted">кеш видалено</string>
    <string name="saved">… збережено</string>
    <string name="delete">видалити</string>
    <string name="deleted">видалено зі збереженого</string>
    <string name="restore">ВІДНОВИТИ</string>
    <string name="no_saved">тут порожньо</string>
    <string name="save">Збережені</string>
    <string name="yesterday">• Вчора</string>
    <string name="day_before_yesterday">• Позавчора</string>
    <string name="dot">•\u0020</string>
    <string name="days_left">\u0020днів тому</string>
    <string name="hours_left">\u0020годин тому</string>
    <string name="minutes_left">\u0020хвилин тому</string>
    <string name="now">• щойно</string>
    <string name="change_wifi_state">дозволити увімкнути wi fi</string>
</resources>
