<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.mahfa.dnswitch.DayNightSwitch
                    android:id="@+id/themeSwitch"
                    android:layout_width="76dp"
                    android:layout_height="40dp"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtSwitchStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/textMax"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:text="@string/max_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekBarFeedSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_max="100"
                app:bsb_min="10"
                app:bsb_progress="1"
                app:bsb_second_track_color="@color/progressTrackColor"
                app:bsb_section_count="1"
                app:bsb_section_text_position="below_section_mark"
                app:bsb_track_color="@color/trackColor" />

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:id="@+id/textTitleSize"
                android:text="@string/text_title_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekBarTitleSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_max="22"
                app:bsb_min="17"
                app:bsb_progress="1"
                app:bsb_second_track_color="@color/progressTrackColor"
                app:bsb_section_count="1"
                app:bsb_section_text_position="below_section_mark"
                app:bsb_track_color="@color/trackColor" />

            <TextView
                android:layout_gravity="center"
                android:padding="8dp"
                android:id="@+id/textTitle"
                android:textAlignment="center"
                android:text="@string/title"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:id="@+id/textTitleContent"
                android:text="@string/text_content_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekBarContentSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bsb_max="12"
                app:bsb_min="20"
                app:bsb_progress="1"
                app:bsb_second_track_color="@color/progressTrackColor"
                app:bsb_section_count="1"
                app:bsb_section_text_position="below_section_mark"
                app:bsb_track_color="@color/trackColor" />

            <TextView
                android:textAlignment="center"
                android:layout_gravity="center"
                android:padding="8dp"
                android:id="@+id/textContent"
                android:text="@string/content"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/deleteButton"
                android:drawableStart="@drawable/ic_delete_forever_white_24dp"
                android:text="@string/remove_cache"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>